Fixed issue in bookings view when the manage button came outside the screenwidth on mobile

--- a/static/booking/css/style.css
+++ b/static/booking/css/style.css
@@ -66,7 +66,7 @@ li>a:hover {
 
 
 .btn-bookings {
-    margin-top: 60px;
+    margin-top: 10px;
 }
 
 /* Custom styling for messages django */
